PHP 7 requirement added to composer.json

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
             "Vehsa\\UniqueWordsCounter\\": "src/"
         }
     },
+    "require": {
+        "php": ">=7.0.0"
+    },
     "require-dev": {
         "phake/phake": "2.*"
     }
